# zeit.ldap

./: .flake8  .hgsubstate  CHANGES.rst  CHANGES.txt  MANIFEST.in  buildout.cfg  pyproject.toml  setup.py
src/zeit/ldap/: README.txt  __init__.py  authentication.py  authentication.zcml  azure.py  configure.zcml  connection.py  ftesting.zcml  login.pt  login.py  test.py  testing.py  tests.py
src/zeit/ldap/generation/: __init__.py  evolve1.py  evolve2.py  evolve3.py  install.py
src/zeit/ldap/tests/: test_azure.py  test_doctest.py  test_ldap.py
