[project]
name = "zeit.ldap"
authors = [{ name = "Zeit Online", email = "zon-backend@zeit.de" }]
dynamic = ["version"]

dependencies = [
    "msal",
    "persistent",
    "transaction",
    "vivi.core",
    "zope.app.appsetup",
    "zope.authentication",
    "zope.component",
    "zope.generations",
    "zope.interface",
    "zope.pluggableauth",
    "zope.principalregistry",
    "zope.publisher",
    "zope.schema",
    "zope.traversing",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/zeit/ldap/__init__.py"

[tool.hatch.build]
only-include = ["src"]
exclude = [
    "**/tests/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zeit"]
strict-naming = false  # required for proper output filename
[tool.hatch.build.targets.sdist]
strict-naming = false  # required for proper output filename


[tool.towncrier]
directory = "docs/changelog/"
filename = "CHANGES.txt"
# Our changelog file already has a title
title_format = ""
# First underline is used for version/date header.
# Second underline is used for the type names (like 'Bug fixes:').
underlines = ["-", "+"]

[[tool.towncrier.type]]
directory = "change"
name = "Changes"
showcontent = true
